 - If an element in Phalcon\Forms doesn't have a label defined now returns the element's name as label
 - Now if a validator in Phalcon\Validator has defined the option 'cancelOnFail' => true the validation
 will be aborted if the validator fails
 - Added Phalcon\Validation\Validator\Between to check a value between a range of two values
 - Phalcon\Forms\Form now extends from Phalcon\DI\Injectable allowing developers to use application services in the form initialization
 - Now calls to Phalcon\Mvc\Router can be chained
 - Phalcon\Mvc\Router::getRewriteUri is now public
 - Added Phalcon\Mvc\Router\Route::beforeMatch to implement arbitrary conditions to unmatch a matched route
 - Phalcon\Mvc\Model can be now set up to throw an exception when the saving process fails
 - Added Phalcon\Assets component to manage CSS/Javascripts resources in an application
 - Added Phalcon\Annotations\Collection::getAll to return all the annotations in a collection that matches a name
 - Added Phalcon\Crypt component to provide encryption facilities to phalcon applications
 - Now Phalcon\Http\Request: get, getQuery y getPost returns the respective superglobals in case of no parameters
 - Now Phalcon\Mvc\Router supports hostname restrictions
 - Added support for filtering/sanitizing in Phalcon\Validation
 - Added events beforeValidation/afterValidation to Phalcon\Validation and Phalcon\Forms\Form
 - Added ability to register user-options in Phalcon\Forms\Form elements
 - Fixed Phalcon\Mvc\Micro\Collections to register a controllers in Phalcon\Mvc\Micro
 - Added Phalcon\Tag::dateField and Phalcon\Tag::numericField
 - Added Phalcon\Forms\Element\Date and Phalcon\Forms\Element\Numeric

1.0.1
 - Paths aren't correctly normalized in Phalcon\Mvc\Model\MetaData\Files
 - Added extra class prefix to schema.table in Phalcon\Mvc\Model\MetaData to avoid multiple-database collisions